Fixed UI layout issues

--- a/features/org.wso2.carbon.appmgt.store.feature/src/main/resources/store/themes/store/css/assets.css
+++ b/features/org.wso2.carbon.appmgt.store.feature/src/main/resources/store/themes/store/css/assets.css
@@ -40,8 +40,8 @@
     height: 122px;
     overflow: hidden;
     position: absolute;
-    top: 2px;
-    right: 11px;
+    top: 7px;
+    right: 0px;
     z-index: 99;
 }
 
